fix: contrast color

--- a/frontend/src/components/Banner/Banner.scss
+++ b/frontend/src/components/Banner/Banner.scss
@@ -42,6 +42,10 @@
     z-index: 2; // au-dessus du ::after
     max-width: 900px;
     padding: 2rem;
+
+    // Commenter/décommenter pour régler problème de contraste
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 1rem;
   }
 
   h1 {
@@ -54,6 +58,7 @@
   p {
     font-size: 1.25rem;
     margin-bottom: 2rem;
+    color: #ffffff;
   }
 
   .banner__btn {
