--- a/frontend/src/pages/Home.scss
+++ b/frontend/src/pages/Home.scss
@@ -43,14 +43,19 @@
     margin-top: 1.5rem;
 
     a {
-      color: $color-primary;
+      display: inline-block;
+      padding: 0.65rem 1.3rem; // même padding que ton bouton Banner
+      font-size: 1.3rem;
       font-weight: 600;
-      font-size: 1.1rem;
+      color: $color-secondary;
       text-decoration: none;
-      border-bottom: 2px solid transparent;
-      transition: border-color 0.3s ease;
+      border: 2px solid $color-secondary;
+      border-radius: 30px; // même arrondi que Banner
+      transition: all 0.3s ease;
 
       &:hover {
+        background-color: $color-primary;
+        color: white;
         border-color: $color-primary;
       }
     }
